--- a/views/title.ejs
+++ b/views/title.ejs
@@ -16,7 +16,7 @@
   <div class="text-center container mt-5">
 
     <div>
-      <img class="p-4" src="title.png" alt="title" width="150" height="150" />
+      <img class="p-4" src="/title.png" alt="title" width="150" height="150" />
     </div>
 
     <h1 class="display-3">Titles</h1>
@@ -27,9 +27,14 @@
     <form>
       <div class="form-group">
         <input type="text" class="form-control" id="usr">
-        <button type="submit" value="title" class="btn btn-secondary mt-1">Submit</button>
+        <button type="submit" class="btn btn-secondary mt-1">Submit</button>
       </div>
     </form>
+  </div>
+
+  <div class="mb-5 mt-5 text-center">
+    <h1>Results:</h1>
+    <p><%= title %></p>
   </div>
 
 
