Setup routing and added routes for Homepage & Titles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,6 @@
 <body>
 
   <!-- -->
-
   <div>
     <ul class="text-center">
       <li id="notes" style="font-size:1.5em">&#9833;</li>
@@ -80,17 +79,17 @@
     <div class="row">
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/title" title="title">
-          <img src="title.png" alt="title" width="150" height="150" />
+          <img src="/images/title.png" alt="title" width="150" height="150" />
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/artist" title="artist">
-          <img src="artist.png" alt="artist" width="150" height="150" />
+          <img src="/images/artist.png" alt="artist" width="150" height="150" />
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/genre" title="genre">
-          <img src="genre.ico" alt="genre" width="150" height="150" />
+          <img src="/images/genre.ico" alt="genre" width="150" height="150" />
         </a>
       </div>
     </div>
@@ -99,12 +98,12 @@
       <div class="col-lg-2 text-center"></div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/year" title="year">
-          <img src="year.png" alt="year" width="150" height="150" />
+          <img src="/images/year.png" alt="year" width="150" height="150" />
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/lyrics" title="lyrics">
-          <img src="lyrics.png" alt="lyrics" width="150" height="150" />
+          <img src="/images/lyrics.png" alt="lyrics" width="150" height="150" />
         </a>
       </div>
       <div class="col-lg-2 text-center"></div>
