Added functional search bar on titles page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
 
     <div class="row">
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/title" title="title">
+        <a href="/titlepage" title="title">
           <img src="/images/title.png" alt="title" width="150" height="150" />
         </a>
       </div>
