Added routing for lyrics pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/lyrics" title="lyrics">
+        <a href="/lyricspage" title="lyrics">
           <img src="/images/lyrics.png" alt="lyrics" width="150" height="150" />
         </a>
       </div>
