--- a/views/lyrics.ejs
+++ b/views/lyrics.ejs
@@ -21,7 +21,6 @@
 </head>
 
 <body class="bg-light">
-  <p>it loaded</p>
   <div class="text-center container mt-5">
 
     <div>
@@ -53,7 +52,7 @@
           <th scope="col">lyrics</th>
       </thead>
       <tbody>
-      <% titles.forEach(function(song) { %>
+      <% lyrics.forEach(function(song) { %>
         <tr>
           <td><%= song.id %></td>
           <td><%= song.title %></td>
