--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/artist" title="artist">
+        <a href="/artistpage" title="artist">
           <img src="/images/artist.png" alt="artist" width="150" height="150" />
         </a>
       </div>
