Added (limited) search functionality to genre page)

--- a/views/genrepage.ejs
+++ b/views/genrepage.ejs
@@ -54,7 +54,7 @@
       <a href="/genre/Other" title="other">
         <li class="list-group-item">Other</li>
       </a>
-      <a href="/genre/NotAvailable" title="notavailable">
+      <a href="/genre/Not Available" title="not-available">
         <li class="list-group-item">Not Available</li>
       </a>
     </ul>
