--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/genre" title="genre">
+        <a href="/genrepage" title="genre">
           <img src="/images/genre.ico" alt="genre" width="150" height="150" />
         </a>
       </div>
