--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,6 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-2 text-center"></div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/year" title="year">
           <img src="/images/year.png" alt="year" width="150" height="150" />
@@ -106,7 +105,11 @@
           <img src="/images/lyrics.png" alt="lyrics" width="150" height="150" />
         </a>
       </div>
-      <div class="col-lg-2 text-center"></div>
+      <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
+        <a href="/multiple" title="multiple">
+          <img src="/images/multiple.png" alt="multiple" width="150" height="150" />
+        </a>
+      </div>
     </div>
   </div>
 
