--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,8 +106,8 @@
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/multiple" title="multiple">
-          <img src="/images/multiple.png" alt="multiple" width="150" height="150" />
+        <a href="/filter" title="filter">
+          <img src="/images/filter.png" alt="multiple" width="150" height="150" />
         </a>
       </div>
     </div>
