--- a/views/lyricspage.ejs
+++ b/views/lyricspage.ejs
@@ -32,9 +32,9 @@
     <br />
 
     <p>Search lyrics by keyword(s):</p>
-      <form method="GET" id = "your_form" onsubmit="yourFunction()">
+    <form method="GET" id = "your_form" onsubmit="yourFunction()">
       <input type="text" name="keywords">
-      <input type="submit" value="Search">
+      <input class="btn-secondary" type="submit" value="Search">
     </form>
   </div>
 
