--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -9,8 +9,14 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <style media="screen">
-  </style>
+  <script type="text/javascript">
+    function yourFunction(){
+      var search = document.getElementsByName("keywords")[0].value;
+      search = search.replace(/\s+/g, '-');
+      var action_src = "http://localhost:3000/artist/search/" + search;
+      your_form.action = action_src ;
+    }
+  </script>
 </head>
 
 <body class="bg-light">
@@ -21,178 +27,19 @@
 
     <h1 class="display-3">Artists</h1>
 
-    <form>
-      <div class="form-group ml-5 mr-5">
-        <label for="usr">Type artist name:</label>
-        <input type="text" class="form-control" id="usr">
-        <button type="submit" class="btn btn-secondary mt-1">Submit</button>
-      </div>
-    </form>
-
-    <p>Or pick alphabetically:</p>
-
-    <ul class="list-group">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">A</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">B</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">C</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">D</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">E</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">F</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">G</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">H</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">I</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">J</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">K</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">L</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">M</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">N</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">O</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">P</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">Q</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">R</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">S</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">T</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">U</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">V</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">W</li>
-            </a>
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">X</li>
-            </a>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-2">
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">Y</li>
-            </a>
-          </div>
-          <div class="col-sm-2">
-          </div>
-          <div class="col-sm-3">
-            <a href="">
-              <li class="list-group-item">Z</li>
-            </a>
-          </div>
-          <div class="col-sm-2">
-          </div>
-        </div>
-
-    </ul>
-
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">artist</th>
+      </thead>
+      <tbody>
+      <% artists.forEach(function(song) { %>
+        <tr>
+          <td><%= song.artist %></td>
+        </tr>
+      <% }) %>
+      </tbody>
+    </table>
 
   </div>
 
