--- a/views/lyrics.ejs
+++ b/views/lyrics.ejs
@@ -34,7 +34,7 @@
     <p>Search lyrics by keyword(s):</p>
       <form method="GET" id = "your_form" onsubmit="yourFunction()">
       <input type="text" name="keywords">
-      <input type="submit" value="Search">
+      <input class="btn-secondary" type="submit" value="Search">
     </form>
   </div>
 
