--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
 
     <div class="row">
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/year" title="year">
+        <a href="/yearpage" title="year">
           <img src="/images/year.png" alt="year" width="150" height="150" />
         </a>
       </div>
@@ -106,7 +106,7 @@
         </a>
       </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/filter" title="filter">
+        <a href="/filterpage" title="filter">
           <img src="/images/filter.png" alt="multiple" width="150" height="150" />
         </a>
       </div>
