--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,6 +95,8 @@
     </div>
 
     <div class="row">
+      <div class="col-lg-2">
+      </div>
       <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
         <a href="/yearpage" title="year">
           <img src="/images/year.png" alt="year" width="150" height="150" />
@@ -105,10 +107,7 @@
           <img src="/images/lyrics.png" alt="lyrics" width="150" height="150" />
         </a>
       </div>
-      <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-        <a href="/filterpage" title="filter">
-          <img src="/images/filter.png" alt="multiple" width="150" height="150" />
-        </a>
+      <div class="col-lg-2">
       </div>
     </div>
   </div>
