--- a/views/artistpage.ejs
+++ b/views/artistpage.ejs
@@ -10,11 +10,11 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script type="text/javascript">
-    function yourFunction(){
+    function yourFunction() {
       var search = document.getElementsByName("keywords")[0].value;
       search = search.replace(/\s+/g, '-');
       var action_src = "http://localhost:3000/artist/search/" + search;
-      your_form.action = action_src ;
+      your_form.action = action_src;
     }
   </script>
 </head>
@@ -27,12 +27,12 @@
 
     <h1 class="display-3">Artists</h1>
 
-    <form method="GET" id = "your_form" onsubmit="yourFunction()">
-      <input type="text" name="keywords">
+    <form method="GET" id="your_form" onsubmit="yourFunction()">
+      <input required type="text" name="keywords">
       <input class="btn-secondary" type="submit" value="Search">
     </form>
 
-    <br/>
+    <br />
 
     <p>Or pick alphabetically:</p>
 
