--- a/views/title.ejs
+++ b/views/title.ejs
@@ -10,11 +10,11 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script type="text/javascript">
-    function yourFunction(){
+    function yourFunction() {
       var search = document.getElementsByName("keywords")[0].value;
       search = search.replace(/\s+/g, '-');
       var action_src = "http://localhost:3000/title/search/" + search;
-      var title_search= document.getElementById('title_search');
+      var title_search = document.getElementById('title_search');
       your_form.action = action_src;
     }
   </script>
@@ -32,8 +32,8 @@
     <br />
 
     <p>Search title by keyword(s):</p>
-      <form method="GET" id = "your_form" onsubmit="yourFunction()">
-      <input type="text" name="keywords">
+    <form method="GET" id="your_form" onsubmit="yourFunction()">
+      <input required type="text" name="keywords">
       <input class="btn-secondary" type="submit" value="Search">
     </form>
   </div>
@@ -52,7 +52,7 @@
           <th scope="col">lyrics</th>
       </thead>
       <tbody>
-      <% titles.forEach(function(song) { %>
+        <% titles.forEach(function(song) { %>
         <tr>
           <td><%= song.id %></td>
           <td><%= song.title %></td>
@@ -61,7 +61,7 @@
           <td><%= song.genre %></td>
           <td><%= song.lyrics %></td>
         </tr>
-      <% }) %>
+        <% }) %>
       </tbody>
     </table>
   </div>
