--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -19,6 +19,14 @@
     <h2 class=display-3>Genres</h2>
   </div>
 
+  <div>
+    <button class="btn btn-secondary float-left p-3 ml-5" type="button" name="button">Previous page</button>
+    <button class="btn btn-secondary float-right p-3 mr-5" type="button" name="button">Next page</button>
+  </div>
+
+  <br />
+  <br />
+
   <div class="mb-5 text-center">
     <h1>Results:</h1>
 
@@ -33,7 +41,7 @@
           <th scope="col">lyrics</th>
       </thead>
       <tbody>
-      <% genres.forEach(function(song) { %>
+        <% genres.forEach(function(song) { %>
         <tr>
           <td><%= song.id %></td>
           <td><%= song.title %></td>
@@ -42,10 +50,24 @@
           <td><%= song.genre %></td>
           <td><%= song.lyrics %></td>
         </tr>
-      <% }) %>
+        <% }) %>
       </tbody>
     </table>
+
+    <br />
+    <br />
+    <br />
+
+    <div class="">
+      <button class="btn btn-secondary float-left p-3 ml-5" type="button" name="button">Previous page</button>
+      <button class="btn btn-secondary float-right p-3 mr-5" type="button" name="button">Next page</button>
+    </div>
+
   </div>
+
+  <br />
+  <br />
+  <br />
 
   <footer class="bg-dark" style="height:10em;">
     <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
@@ -54,6 +76,8 @@
       <a class="text-white" href="/home">Go back to homepage</a>
     </div>
   </footer>
+
+
 
 </body>
 
