created working pages

--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -9,6 +9,10 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+
+  </script>
 </head>
 
 <body class="bg-light">
@@ -19,9 +23,29 @@
     <h2 class=display-3>Genres</h2>
   </div>
 
-  <div>
-    <button class="btn btn-secondary float-left p-3 ml-5" type="button" name="button">Previous page</button>
-    <button class="btn btn-secondary float-right p-3 mr-5" type="button" name="button">Next page</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2">
+        <a href="/artist/letter/A">
+          <a href="http://localhost:3000/genre/<%= genrename %>/<%=parseInt(pagenumber,10) - 1%>">
+            <li class="list-group-item">Previous page</li>
+          </a>
+        </a>
+      </div>
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-2">
+        <a href="http://localhost:3000/genre/<%= genrename %>/<%=parseInt(pagenumber,10) + 1%>">
+          <li class="list-group-item">Next page</li>
+        </a>
+      </div>
+    </div>
   </div>
 
   <br />
@@ -59,7 +83,7 @@
     <br />
 
     <div class="">
-      <button class="btn btn-secondary float-left p-3 ml-5" type="button" name="button">Previous page</button>
+      <button class=" btn btn-secondary float-left p-3 ml-5" type="button" name="button">Previous page</button>
       <button class="btn btn-secondary float-right p-3 mr-5" type="button" name="button">Next page</button>
     </div>
 
