--- a/views/genrepage.ejs
+++ b/views/genrepage.ejs
@@ -21,40 +21,40 @@
     <form>
     </form>
     <ul class="list-group">
-      <a href="/genre/Pop/0" title="pop">
+      <a href="http://localhost:3000/genre/Pop/0" title="pop">
         <li class="list-group-item">Pop</li>
       </a>
-      <a href="/genre/Hip-Hop/0" title="hip-hop">
+      <a href="http://localhost:3000/genre/Hip-Hop/0" title="hip-hop">
         <li class="list-group-item">Hip-Hop</li>
       </a>
-      <a href="/genre/Rock/0" title="rock">
+      <a href="http://localhost:3000/genre/Rock/0" title="rock">
         <li class="list-group-item">Rock</li>
       </a>
-      <a href="/genre/Metal/0" title="metal">
+      <a href="http://localhost:3000/genre/Metal/0" title="metal">
         <li class="list-group-item">Metal</li>
       </a>
-      <a href="/genre/Country/0" title="country">
+      <a href="http://localhost:3000/genre/Country/0" title="country">
         <li class="list-group-item">Country</li>
       </a>
-      <a href="/genre/Jazz/0" title="jazz">
+      <a href="http://localhost:3000/genre/Jazz/0" title="jazz">
         <li class="list-group-item">Jazz</li>
       </a>
-      <a href="/genre/Electronic/0" title="electronic">
+      <a href="http://localhost:3000/genre/Electronic/0" title="electronic">
         <li class="list-group-item">Electronic</li>
       </a>
-      <a href="/genre/Folk/0" title="folk">
+      <a href="http://localhost:3000/genre/Folk/0" title="folk">
         <li class="list-group-item">Folk</li>
       </a>
-      <a href="/genre/R&B/0" title="r&b">
+      <a href="http://localhost:3000/genre/R&B/0" title="r&b">
         <li class="list-group-item">R&B</li>
       </a>
-      <a href="/genre/Indie/0" title="indie">
+      <a href="http://localhost:3000/genre/Indie/0" title="indie">
         <li class="list-group-item">Indie</li>
       </a>
-      <a href="/genre/Other/0" title="other">
+      <a href="http://localhost:3000/genre/Other/0" title="other">
         <li class="list-group-item">Other</li>
       </a>
-      <a href="/genre/Not Available/0" title="not-available">
+      <a href="http://localhost:3000/genre/Not Available/0" title="not-available">
         <li class="list-group-item">Not Available</li>
       </a>
     </ul>
