--- a/views/year.ejs
+++ b/views/year.ejs
@@ -17,7 +17,7 @@
     function yourFunction() {
       var search = document.getElementsByName("year_value")[0].value;
       search = search.replace(/\s+/g, '-');
-      var action_src = "http://localhost:3000/year/search/" + search;
+      var action_src = "http://localhost:3000/year/search/" + search + '/0';
       var lyrics_search = document.getElementById('lyrics_search');
       your_form.action = action_src;
     }
@@ -45,6 +45,38 @@
       </form>
 
       <h1>Results:</h1>
+
+      <br />
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <a href="/artist/letter/A">
+              <a href="http://localhost:3000/year/search/<%= curryear %>/<%=parseInt(pagenumber,10) - 1%>">
+                <li class="list-group-item">Previous page</li>
+              </a>
+            </a>
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+            <a href="http://localhost:3000/year/search/<%= curryear %>/<%=parseInt(pagenumber,10) + 1%>">
+              <li class="list-group-item">Next page</li>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <br />
+      <br />
+
 
       <table class="table">
         <thead>
