--- a/views/year.ejs
+++ b/views/year.ejs
@@ -102,6 +102,39 @@
         </tbody>
       </table>
 
+
+      <br />
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <a href="/artist/letter/A">
+              <a href="http://localhost:3000/year/search/<%= curryear %>/<%=parseInt(pagenumber,10) - 1%>">
+                <li class="list-group-item">Previous page</li>
+              </a>
+            </a>
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
+            <a href="http://localhost:3000/year/search/<%= curryear %>/<%=parseInt(pagenumber,10) + 1%>">
+              <li class="list-group-item">Next page</li>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <br />
+      <br />
+
+
     </div>
     <footer class="bg-dark mt-5" style="height:10em;">
       <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
