--- a/views/lyrics.ejs
+++ b/views/lyrics.ejs
@@ -93,6 +93,38 @@
         <% }) %>
       </tbody>
     </table>
+
+    <br />
+    <br />
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-2">
+          <a href="/artist/letter/A">
+            <a href="http://localhost:3000/lyrics/search/<%= currlyric %>/<%=parseInt(pagenumber,10) - 1%>">
+              <li class="list-group-item">Previous page</li>
+            </a>
+          </a>
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+          <a href="http://localhost:3000/lyrics/search/<%= currlyric %>/<%=parseInt(pagenumber,10) + 1%>">
+            <li class="list-group-item">Next page</li>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <br />
+    <br />
+
   </div>
 
 
