Added pagination to Artist search (removed alphabetical sorting)

--- a/views/artistpage.ejs
+++ b/views/artistpage.ejs
@@ -13,7 +13,7 @@
     function yourFunction() {
       var search = document.getElementsByName("keywords")[0].value;
       search = search.replace(/\s+/g, '-');
-      var action_src = "http://localhost:3000/artist/search/" + search;
+      var action_src = "http://localhost:3000/artist/search/" + search +"/0";
       your_form.action = action_src;
     }
   </script>
@@ -41,22 +41,22 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/A">
+            <a href="/artist/letter/A/0">
               <li class="list-group-item">A</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/B">
+            <a href="/artist/letter/B/0">
               <li class="list-group-item">B</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/C">
+            <a href="/artist/letter/C/0">
               <li class="list-group-item">C</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/D">
+            <a href="/artist/letter/D/0">
               <li class="list-group-item">D</li>
             </a>
           </div>
@@ -64,22 +64,22 @@
         <br />
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/E">
+            <a href="/artist/letter/E/0">
               <li class="list-group-item">E</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/F">
+            <a href="/artist/letter/F/0">
               <li class="list-group-item">F</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/G">
+            <a href="/artist/letter/G/0">
               <li class="list-group-item">G</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/H">
+            <a href="/artist/letter/H/0">
               <li class="list-group-item">H</li>
             </a>
           </div>
@@ -87,22 +87,22 @@
         <br />
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/I">
+            <a href="/artist/letter/I/0">
               <li class="list-group-item">I</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/J">
+            <a href="/artist/letter/J/0">
               <li class="list-group-item">J</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/K">
+            <a href="/artist/letter/K/0">
               <li class="list-group-item">K</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/L">
+            <a href="/artist/letter/L/0">
               <li class="list-group-item">L</li>
             </a>
           </div>
@@ -110,22 +110,22 @@
         <br />
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/M">
+            <a href="/artist/letter/M/0">
               <li class="list-group-item">M</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/N">
+            <a href="/artist/letter/N/0">
               <li class="list-group-item">N</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/O">
+            <a href="/artist/letter/O/0">
               <li class="list-group-item">O</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/P">
+            <a href="/artist/letter/P/0">
               <li class="list-group-item">P</li>
             </a>
           </div>
@@ -133,22 +133,22 @@
         <br />
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/Q">
+            <a href="/artist/letter/Q/0">
               <li class="list-group-item">Q</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/R">
+            <a href="/artist/letter/R/0">
               <li class="list-group-item">R</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/S">
+            <a href="/artist/letter/S/0">
               <li class="list-group-item">S</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/T">
+            <a href="/artist/letter/T/0">
               <li class="list-group-item">T</li>
             </a>
           </div>
@@ -156,22 +156,22 @@
         <br />
         <div class="row">
           <div class="col-sm-3">
-            <a href="/artist/letter/U">
+            <a href="/artist/letter/U/0">
               <li class="list-group-item">U</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/V">
+            <a href="/artist/letter/V/0">
               <li class="list-group-item">V</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/W">
+            <a href="/artist/letter/W/0">
               <li class="list-group-item">W</li>
             </a>
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/X">
+            <a href="/artist/letter/X/0">
               <li class="list-group-item">X</li>
             </a>
           </div>
@@ -181,14 +181,14 @@
           <div class="col-sm-2">
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/Y">
+            <a href="/artist/letter/Y/0">
               <li class="list-group-item">Y</li>
             </a>
           </div>
           <div class="col-sm-2">
           </div>
           <div class="col-sm-3">
-            <a href="/artist/letter/Z">
+            <a href="/artist/letter/Z/0">
               <li class="list-group-item">Z</li>
             </a>
           </div>
