--- a/views/artist-letter-results.ejs
+++ b/views/artist-letter-results.ejs
@@ -10,12 +10,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script type="text/javascript">
-    function yourFunction() {
-      let search = document.getElementsByName("keywords")[0].value;
-      search = search.replace(/\s+/g, '-');
-      let action_src = "http://localhost:3000/artist/search/" + search;
-      your_form.action = action_src;
-    }
   </script>
 </head>
 
@@ -26,6 +20,31 @@
     </div>
 
     <h1 class="display-3">Artists</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-2">
+          <a href="/artist/letter/A">
+            <a href="http://localhost:3000/artist/letter/<%= currletter %>/<%=parseInt(pagenumber,10) - 1%>">
+              <li class="list-group-item">Previous page</li>
+            </a>
+          </a>
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+          <a href="http://localhost:3000/artist/letter/<%= currletter %>/<%=parseInt(pagenumber,10) + 1%>">
+            <li class="list-group-item">Next page</li>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <table class="table">
       <thead>
